--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,12 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery-item {
+  display: flex;
+  width: 300px;
+  height: 300px;
+  flex-basis: calc((100%-60px)/3);
+  justify-content:space-around;
+  object-fit:contain;
+}
